// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text H1 test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-regular",
        "fontSize": 24,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
  weight="h1"
>
  Snapshot test!
</Text>
`;

exports[`Text H2 test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-semi-bold",
        "fontSize": 24,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
  weight="h2"
>
  Snapshot test!
</Text>
`;

exports[`Text H3 test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-regular",
        "fontSize": 18,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
  weight="h3"
>
  Snapshot test!
</Text>
`;

exports[`Text H4 test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-regular",
        "fontSize": 16,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
  weight="h4"
>
  Snapshot test!
</Text>
`;

exports[`Text H5 test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-semi-bold",
        "fontSize": 16,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
  weight="h5"
>
  Snapshot test!
</Text>
`;

exports[`Text P test 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "sora-regular",
        "fontSize": 12,
      },
      Object {
        "color": "black",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`View 1`] = `<View />`;
